--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -81,29 +81,29 @@
 <p>En application de l’article 6 de la loi précitée et de l’article 11 du RGPD, aucune donnée excédant les finalités déclarées n’est collectée. Par ailleurs, notre site ne recourt ni à des formulaires d’inscription, ni à des mécanismes de collecte automatique de données personnelles non expressément fournies par les utilisateurs.</p>
 <p></p>
 <p></p>
-<h2>3. Finalità e basi giuridiche del trattamento</h2>
-<p>I dati personali raccolti attraverso formaeffimera.com vengono trattati esclusivamente per le seguenti finalità, in conformità con le basi giuridiche definite dal GDPR:</p>
-<p>1. Gestione delle comunicazioni ricevute</p>
+<h2>3. Finalités et bases légales du traitement</h2>
+<p>Les données personnelles collectées par formaeffimera.com sont traitées exclusivement aux fins suivantes, en conformité avec les bases légales définies par le Règlement général sur la protection des données (RGPD) et la loi n° 78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés :</p>
+<p>1. Gestion des communications reçues</p>
 <ul>
-<li>Finalità: Rispondere alle richieste inviate via email all&#x27;indirizzo privacy@formaeffimera.com, fornendo informazioni o supporto.</li>
-<li>Base giuridica: L&#x27;esecuzione di misure precontrattuali su richiesta dell&#x27;interessato (art. 6, par. 1, lett. b GDPR).</li>
+<li>Finalité : Répondre aux demandes formulées par e-mail, notamment via l’adresse privacy@formaeffimera.com, en fournissant des informations ou une assistance.</li>
+<li>Base légale : Exécution de mesures précontractuelles à la demande de la personne concernée, conformément à l’article 6, paragraphe 1, point b) du RGPD.</li>
 </ul>
-<p>2. Sicurezza e manutenzione del sito</p>
+<p>2. Sécurité et maintenance du site</p>
 <ul>
-<li>Finalità: Garantire la sicurezza del sito web, prevenire accessi non autorizzati o attacchi informatici e migliorare la funzionalità e l'esperienza utente.</li>
-<li>Base giuridica: Il legittimo interesse del titolare del trattamento (art. 6, par. 1, lett. f GDPR).</li>
+<li>Finalité : Garantir la sécurité du site internet, prévenir tout accès non autorisé ou cyberattaque, et améliorer la fonctionnalité ainsi que l’expérience utilisateur.</li>
+<li>Base légale : Intérêt légitime du responsable du traitement, comme prévu à l’article 6, paragraphe 1, point f) du RGPD.</li>
 </ul>
-<p>3. Adempimento di obblighi legali</p>
+<p>3. Respect des obligations légales</p>
 <ul>
-<li>Finalità: Ottemperare a obblighi previsti dalla normativa applicabile, come richieste delle autorità competenti o obblighi in materia fiscale e amministrativa.</li>
-<li>Base giuridica: L&#x27;adempimento di un obbligo legale al quale il titolare è soggetto (art. 6, par. 1, lett. c GDPR).</li>
+<li>Finalité : Se conformer aux obligations légales imposées par la réglementation applicable, notamment en réponse aux demandes des autorités compétentes ou en matière administrative et fiscale.</li>
+<li>Base légale : Respect d’une obligation légale à laquelle le responsable du traitement est soumis, conformément à l’article 6, paragraphe 1, point c) du RGPD.</li>
 </ul>
-<p>4. Analisi di navigazione e performance del sito (ove applicabile)</p>
+<p>4. Analyse de navigation et performance du site (le cas échéant)</p>
 <ul>
-<li>Finalità: Monitorare e analizzare l'uso del sito per migliorarne i contenuti e le funzionalità.</li>
-<li>Base giuridica: Il consenso espresso dall&#x27;utente, qualora vengano utilizzati cookie di analisi (art. 6, par. 1, lett. a GDPR).</li>
+<li>Finalité : Suivre et analyser l’utilisation du site afin d’en améliorer les contenus et les fonctionnalités.</li>
+<li>Base légale : Consentement explicite de l’utilisateur, notamment en cas d’utilisation de cookies analytiques, conformément à l’article 6, paragraphe 1, point a) du RGPD et à la directive européenne 2002/58/CE transposée en droit français.</li>
 </ul>
-<p>Nota: Nessun trattamento per finalità di marketing o profilazione viene effettuato tramite il sito.</p>
+<p>Note : Aucun traitement de données à des fins de marketing ou de profilage n’est réalisé via le site.</p>
 <p></p>
 <p></p>
 <h2>4. Modalità di trattamento dei dati personali</h2>
