--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -106,51 +106,53 @@
 <p>Note : Aucun traitement de données à des fins de marketing ou de profilage n’est réalisé via le site.</p>
 <p></p>
 <p></p>
-<h2>4. Modalità di trattamento dei dati personali</h2>
-<p>I dati personali raccolti attraverso formaeffimera.com sono trattati nel rispetto dei principi di correttezza, liceità, trasparenza e minimizzazione, come stabilito dall&#x27;art. 5 del GDPR.</p>
-<p>Il trattamento viene effettuato con strumenti elettronici e informatici, adottando misure tecniche e organizzative adeguate per garantire la sicurezza e la riservatezza dei dati, tra cui:</p>
+<h2>4. Modalités de traitement des données personnelles</h2>
+<p>Les données personnelles collectées via formaeffimera.com sont traitées conformément aux principes de licéité, de loyauté, de transparence et de minimisation des données, tels que définis à l’article 5 du Règlement général sur la protection des données (RGPD) et aux dispositions pertinentes de la loi n° 78-17 du 6 janvier 1978.</p>
+<p>Le traitement des données est réalisé à l’aide d’outils électroniques et informatiques, avec la mise en œuvre de mesures techniques et organisationnelles appropriées afin d’assurer la sécurité et la confidentialité des données, notamment :</p>
 <ul>
-<li>Protezione da accessi non autorizzati: utilizzo di sistemi di autenticazione sicura per l'accesso ai server di hosting e alla piattaforma GitHub utilizzata per la gestione dei contenuti del sito.</li>
-<li>Crittografia delle comunicazioni: utilizzo del protocollo HTTPS per proteggere i dati trasmessi tra l'utente e il sito.</li>
-<li>Conservazione limitata: i dati personali vengono conservati solo per il tempo necessario a soddisfare le finalità indicate e successivamente cancellati o resi anonimi.</li>
+<li>Protection contre les accès non autorisés : Utilisation de systèmes d’authentification sécurisés pour accéder aux serveurs d’hébergement et à toute plateforme de gestion des contenus du site.</li>
+<li>Cryptage des communications : Adoption du protocole HTTPS pour sécuriser les échanges de données entre les utilisateurs et le site.</li>
+<li>Limitation de la conservation : Les données personnelles sont conservées uniquement pendant la durée nécessaire à l’accomplissement des finalités déclarées. Une fois ces finalités atteintes, les données sont soit supprimées, soit anonymisées, conformément à l’article 5, paragraphe 1, point e) du RGPD.</li>
 </ul>
-<p>Il trattamento viene eseguito esclusivamente dal titolare del sito o da soggetti strettamente autorizzati e non comporta processi decisionali automatizzati o profilazione.</p>
-<p>In caso di trattamento dei dati da parte di terze parti (es. Register.it per la gestione del dominio o provider di hosting), tali soggetti sono nominati responsabili del trattamento ai sensi dell'art. 28 GDPR e garantiscono livelli di protezione adeguati.</p>
-<p>Nota: I dati non saranno mai ceduti a terzi per scopi non dichiarati o estranei alle finalità previste.</p>
+<p>Le traitement est effectué exclusivement par le responsable du traitement ou par des personnes expressément autorisées à cet effet. Aucun traitement n’implique de processus décisionnel automatisé ou de profilage, conformément à l’article 22 du RGPD.</p>
+<p>En cas de recours à des tiers pour le traitement des données (par exemple, pour la gestion de l’hébergement ou du domaine), ces entités sont désignées en tant que sous-traitants, en application de l’article 28 du RGPD, et s’engagent à garantir des niveaux de protection conformes à la réglementation applicable.</p>
+<p>Note : Les données personnelles ne sont jamais cédées à des tiers à des fins non déclarées ou incompatibles avec les finalités prévues.</p>
 <p></p>
 <p></p>
-<h2>5. Periodo di conservazione dei dati</h2>
+<h2>5. Durée de conservation des données</h2>
 <p></p>
-<p>I dati personali raccolti attraverso formaeffimera.com vengono conservati per il periodo strettamente necessario al raggiungimento delle finalità indicate nella presente informativa, in conformità con l&#x27;art. 5, par. 1, lett. e del GDPR.</p>
-<p>1. Dati di contatto</p>
-<p>Conservati per il tempo necessario a gestire la comunicazione e fornire una risposta adeguata alle richieste ricevute via email. Una volta completata l'interazione, i dati saranno cancellati salvo necessità di conservazione per obblighi legali o per finalità di legittimo interesse.</p>
-<p>2. Dati tecnici di navigazione</p>
-<p>Conservati per un periodo massimo di 7 giorni, salvo eventuali necessità legate alla rilevazione e gestione di attività dannose per la sicurezza del sito.</p>
-<p>3. Obblighi legali</p>
-<p>I dati saranno conservati per il tempo richiesto dalla normativa applicabile (ad esempio, obblighi fiscali, contabili o amministrativi).</p>
-<p>4. Consenso per finalità specifiche</p>
-<p>Qualora il trattamento dei dati sia basato sul consenso (ad esempio, per cookie non essenziali), i dati saranno conservati fino a revoca del consenso stesso da parte dell'utente.</p>
-<p>Al termine dei suddetti periodi, i dati personali saranno eliminati o resi anonimi in modo da non consentire l&#x27;identificazione degli interessati.</p>
+<p>Les données personnelles collectées via formaeffimera.com sont conservées uniquement pour la durée nécessaire à la réalisation des finalités mentionnées dans la présente politique, conformément à l’article 5, paragraphe 1, point e) du Règlement général sur la protection des données (RGPD) et à la loi n° 78-17 du 6 janvier 1978 modifiée.</p>
+<p>1. Données de contact</p>
+<p>Ces données sont conservées pour la durée nécessaire à la gestion des communications et à la fourniture d’une réponse adéquate aux demandes reçues par e-mail. Une fois l’interaction terminée, les données seront supprimées, sauf en cas de nécessité de conservation pour satisfaire à des obligations légales ou dans le cadre d’intérêts légitimes.</p>
+<p>2. Données techniques de navigation</p>
+<p>Les données collectées automatiquement à des fins de sécurité ou d’analyse de navigation sont conservées pour une durée maximale de 7 jours, sauf si elles doivent être retenues plus longtemps pour identifier ou gérer des activités malveillantes susceptibles de compromettre la sécurité du site.</p>
+<p>3. Respect des obligations légales</p>
+<p>Les données sont conservées pendant la durée exigée par les réglementations applicables, notamment en matière fiscale, comptable ou administrative, conformément aux dispositions des articles L. 102 B du Livre des procédures fiscales et aux principes énoncés par le RGPD et la loi Informatique et Libertés.</p>
+<p>4. Traitements fondés sur le consentement</p>
+<p>Lorsque le traitement repose sur le consentement de l’utilisateur (par exemple, pour les cookies non essentiels ou autres finalités spécifiques), les données sont conservées jusqu’à la révocation du consentement par l’utilisateur.</p>
+<p>Mesures postérieures à la conservation : À l’expiration des périodes indiquées, les données personnelles seront soit supprimées, soit anonymisées afin d’empêcher toute identification des personnes concernées, conformément aux exigences légales.</p>
 <p></p>
 <p></p>
-<h2>6. Trasferimento dei dati personali</h2>
-<p>I dati personali raccolti attraverso formaeffimera.com sono trattati all'interno dell'Unione Europea e non sono trasferiti a paesi terzi o organizzazioni internazionali al di fuori dello Spazio Economico Europeo (SEE), salvo che ciò sia strettamente necessario e nel rispetto delle disposizioni previste dal Regolamento Generale sulla Protezione dei Dati (GDPR).</p>
-<p>Eccezioni al trasferimento dei dati</p>
-<p>Qualora si rendesse necessario trasferire i dati verso paesi terzi:</p>
+<h2>6. Transfert des données personnelles</h2>
+<p>Les données personnelles collectées via formaeffimera.com sont traitées exclusivement au sein de l’Union européenne (UE) et ne sont pas transférées vers des pays tiers ou des organisations internationales en dehors de l’Espace Économique Européen (EEE), sauf si cela s’avère strictement nécessaire et en conformité avec les dispositions prévues par le Règlement Général sur la Protection des Données (RGPD) et la loi n° 78-17 du 6 janvier 1978 modifiée.</p>
+<p>Exceptions au transfert des données</p>
+<p>En cas de nécessité de transfert de données personnelles vers des pays tiers :</p>
 <ul>
-<li>Il trasferimento sarà effettuato esclusivamente verso paesi che garantiscono un livello adeguato di protezione dei dati personali riconosciuto dalla Commissione Europea oppure</li>
-<li>Saranno adottate misure aggiuntive di protezione, come l'utilizzo di clausole contrattuali standard (Standard Contractual Clauses - SCC) approvate dalla Commissione Europea o altre garanzie equivalenti previste dal GDPR.</li>
+<p>1. Le transfert sera effectué uniquement vers des pays reconnus par la Commission européenne comme offrant un niveau de protection adéquat des données personnelles.</p>
+<p>1. Si le pays tiers ne bénéficie pas de cette reconnaissance, des mesures de protection supplémentaires seront mises en œuvre, telles que :<p>
+<li>L’utilisation de clauses contractuelles types approuvées par la Commission européenne.<li>
+<li>Toute autre garantie équivalente prévue par le RGPD, conformément à l’article 46 et aux dispositions nationales applicables.<li>
 </ul>
-<p>Provider e strumenti utilizzati</p>
+<p>Prestataires et outils utilisés</p>
 <p>Il sito utilizza i seguenti provider e strumenti per la gestione del dominio e dei contenuti:</p>
-<p>1. Register.it: per la registrazione del dominio, conforme agli standard di sicurezza e privacy dell'Unione Europea.</p>
-<p>2.GitHub: per la gestione del sito e dei contenuti, che opera in conformità con il GDPR. I dati gestiti attraverso GitHub sono memorizzati in server ubicati nell'Unione Europea o adeguatamente protetti.</p>
-<p>Nessun trasferimento non autorizzato</p>
-<p>Non verranno effettuati trasferimenti di dati personali verso paesi terzi senza una comunicazione preventiva e, ove richiesto, senza il tuo esplicito consenso.</p>
+<p>1. Register.it : Utilisé pour la gestion du domaine. Ce prestataire respecte les normes de sécurité et de confidentialité en vigueur dans l’Union européenne.</p>
+<p>2. GitHub : Utilisé pour la gestion du site et de ses contenus. Les données traitées via GitHub sont stockées sur des serveurs situés au sein de l’UE ou font l’objet de garanties appropriées conformes au RGPD.</p>
+<p>Absence de transfert non autorisé</p>
+<p>Aucun transfert de données personnelles vers des pays tiers ne sera effectué sans une communication préalable à l’utilisateur. Le cas échéant, un consentement explicite sera requis si cela est imposé par la réglementation.</p>
 <p></p>
 <p></p>
 <h2>7. Sicurezza dei dati personali</h2>
-<p>formaeffimera.com adotta misure tecniche e organizzative adeguate per garantire la sicurezza dei dati personali e proteggerli da accessi non autorizzati, perdita, distruzione, modifica o divulgazione non autorizzata, in conformità con l'art. 32 del GDPR.</p>
+<p>formaeffimera.com recourt aux prestataires et outils suivants pour la gestion du domaine et des contenus du site :</p>
 <p>Misure tecniche implementate</p>
 <p>1. Crittografia dei dati</p>
 <p>I dati personali trasmessi attraverso il sito sono protetti tramite protocolli di sicurezza, come il protocollo HTTPS, che garantiscono la crittografia durante la trasmissione.</p>
