--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -139,8 +139,11 @@
 <p>En cas de nécessité de transfert de données personnelles vers des pays tiers :</p>
 <ul>
 <p>1. Le transfert sera effectué uniquement vers des pays reconnus par la Commission européenne comme offrant un niveau de protection adéquat des données personnelles.</p>
-<p>1. Si le pays tiers ne bénéficie pas de cette reconnaissance, des mesures de protection supplémentaires seront mises en œuvre, telles que :<p>
+<ul>
+<p>2. Si le pays tiers ne bénéficie pas de cette reconnaissance, des mesures de protection supplémentaires seront mises en œuvre, telles que :<p>
+<ul>
 <li>L’utilisation de clauses contractuelles types approuvées par la Commission européenne.<li>
+<ul>
 <li>Toute autre garantie équivalente prévue par le RGPD, conformément à l’article 46 et aux dispositions nationales applicables.<li>
 </ul>
 <p>Prestataires et outils utilisés</p>
@@ -151,24 +154,24 @@
 <p>Aucun transfert de données personnelles vers des pays tiers ne sera effectué sans une communication préalable à l’utilisateur. Le cas échéant, un consentement explicite sera requis si cela est imposé par la réglementation.</p>
 <p></p>
 <p></p>
-<h2>7. Sicurezza dei dati personali</h2>
-<p>formaeffimera.com recourt aux prestataires et outils suivants pour la gestion du domaine et des contenus du site :</p>
-<p>Misure tecniche implementate</p>
-<p>1. Crittografia dei dati</p>
-<p>I dati personali trasmessi attraverso il sito sono protetti tramite protocolli di sicurezza, come il protocollo HTTPS, che garantiscono la crittografia durante la trasmissione.</p>
-<p>2. Accesso limitato</p>
-<p>L'accesso ai dati personali è riservato esclusivamente al personale autorizzato e agli operatori coinvolti nella gestione del dominio e dei contenuti, come Register.it e GitHub, che rispettano rigorose politiche di sicurezza.</p>
-<p>3. Protezione dei server</p>
-<p>I server che ospitano i dati e i contenuti di formaeffimera.com sono gestiti in ambienti sicuri, protetti da firewall, sistemi di rilevamento delle intrusioni e accesso controllato.</p>
-<p>4. Backup dei dati</p>
-<p>I dati tecnici e operativi sono regolarmente sottoposti a backup per garantire il recupero delle informazioni in caso di guasti o incidenti.</p>
-<p>Mitigazione dei rischi</p>
-<p>1. Monitoraggio e aggiornamenti</p>
-<p>Il sistema è sottoposto a monitoraggio continuo per individuare e risolvere eventuali vulnerabilità di sicurezza. Gli strumenti software utilizzati sono costantemente aggiornati per prevenire rischi legati a falle di sicurezza note.</p>
-<p>2. Gestione delle credenziali</p>
-<p>L'accesso agli strumenti di gestione del sito è protetto da credenziali sicure e, ove possibile, autenticazione a due fattori (2FA).</p>
-<p>Obbligo di notifica</p>
-<p>In caso di violazione dei dati personali (data breach), formaeffimera.com si impegna a notificare l'evento al Garante per la Protezione dei Dati Personali e, nei casi previsti, agli interessati, conformemente agli articoli 33 e 34 del GDPR.</p>
+<h2>7. Sécurité des données personnelles</h2>
+<p>formaeffimera.com s’engage à garantir la sécurité des données personnelles collectées sur son site internet en mettant en œuvre des mesures techniques et organisationnelles adaptées, conformément aux dispositions du Règlement général sur la protection des données (RGPD) et de la loi n° 78-17 du 6 janvier 1978 relative à l’informatique, aux fichiers et aux libertés.</p>
+<p>Mesures techniques mises en œuvre</p>
+<p>1. Cryptage des données</p>
+<p>Les données personnelles transmises via le site sont protégées par des protocoles de sécurité, tels que le protocole HTTPS, qui assurent un cryptage des communications lors de leur transmission.</p>
+<p>2. Accès restreint</p>
+<p>L’accès aux données personnelles est strictement réservé aux personnes autorisées et aux prestataires impliqués dans la gestion du site, tels que Register.it et GitHub, qui respectent des normes de sécurité élevées et des politiques strictes en matière de confidentialité.</p>
+<p>3. Protection des serveurs</p>
+<p>Les serveurs hébergeant les données et les contenus de formaeffimera.com sont situés dans des environnements sécurisés, protégés par des pare-feu, des systèmes de détection des intrusions, et des contrôles d’accès rigoureux.</p>
+<p>4. Sauvegarde des données</p>
+<p>Des sauvegardes régulières des données techniques et opérationnelles sont effectuées afin d’assurer leur récupération en cas de panne ou d’incident.</p>
+<p>Atténuation des risques</p>
+<p>1. Surveillance et mises à jour</p>
+<p>Le système fait l’objet d’une surveillance continue pour identifier et remédier aux éventuelles vulnérabilités. Les logiciels utilisés sont régulièrement mis à jour afin de prévenir les risques liés aux failles de sécurité connues.</p>
+<p>2. Gestion des identifiants d’accès</p>
+<p>L’accès aux outils de gestion du site est sécurisé par des identifiants complexes et, lorsque cela est possible, par l’utilisation de l’authentification à deux facteurs (2FA).</p>
+<p>Obligation de notification</p>
+<p>En cas de violation des données personnelles (data breach), formaeffimera.com s’engage à notifier l’événement à la Commission Nationale de l’Informatique et des Libertés (CNIL) dans les délais prévus par l’article 33 du RGPD. Lorsque la violation est susceptible de porter atteinte aux droits et libertés des personnes concernées, celles-ci seront également informées, conformément à l’article 34 du RGPD.</p>
 <p></p>
 <p></p>
 <h2>8. Diritti degli interessati</h2>
