--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -137,13 +137,9 @@
 <p>Les données personnelles collectées via formaeffimera.com sont traitées exclusivement au sein de l’Union européenne (UE) et ne sont pas transférées vers des pays tiers ou des organisations internationales en dehors de l’Espace Économique Européen (EEE), sauf si cela s’avère strictement nécessaire et en conformité avec les dispositions prévues par le Règlement Général sur la Protection des Données (RGPD) et la loi n° 78-17 du 6 janvier 1978 modifiée.</p>
 <p>Exceptions au transfert des données</p>
 <p>En cas de nécessité de transfert de données personnelles vers des pays tiers :</p>
-<ul>
 <p>1. Le transfert sera effectué uniquement vers des pays reconnus par la Commission européenne comme offrant un niveau de protection adéquat des données personnelles.</p>
-<ul>
 <p>2. Si le pays tiers ne bénéficie pas de cette reconnaissance, des mesures de protection supplémentaires seront mises en œuvre, telles que :<p>
-<ul>
 <li>L’utilisation de clauses contractuelles types approuvées par la Commission européenne.<li>
-<ul>
 <li>Toute autre garantie équivalente prévue par le RGPD, conformément à l’article 46 et aux dispositions nationales applicables.<li>
 </ul>
 <p>Prestataires et outils utilisés</p>
@@ -174,44 +170,43 @@
 <p>En cas de violation des données personnelles (data breach), formaeffimera.com s’engage à notifier l’événement à la Commission Nationale de l’Informatique et des Libertés (CNIL) dans les délais prévus par l’article 33 du RGPD. Lorsque la violation est susceptible de porter atteinte aux droits et libertés des personnes concernées, celles-ci seront également informées, conformément à l’article 34 du RGPD.</p>
 <p></p>
 <p></p>
-<h2>8. Diritti degli interessati</h2>
-<p>In conformità con il Regolamento Generale sulla Protezione dei Dati (GDPR), gli utenti di formaeffimera.com hanno il diritto di esercitare i seguenti diritti relativi ai propri dati personali:</p>
-<p>1. Diritto di accesso (Art. 15 GDPR)</p>
-<p>Hai il diritto di ottenere conferma che sia in corso o meno un trattamento di dati personali che ti riguardano e, in tal caso, di accedere a tali dati e ricevere informazioni su:</p>
+<h2>8. Droits des personnes concernées</h2>
+<p>Conformément au Règlement général sur la protection des données (RGPD), les utilisateurs de formaeffimera.com disposent des droits suivants relatifs à leurs données personnelles :</p>
+<h3>1. Droit d’accès (Article 15 RGPD)</h3>
+<p>Vous avez le droit de savoir si vos données personnelles sont traitées et, le cas échéant, d’y accéder, ainsi que d’obtenir des informations sur :</p>
 <ul>
-<li>Le finalità del trattamento.</li>
-<li>Le categorie di dati trattati.</li>
-<li>I destinatari a cui i dati personali sono stati o saranno comunicati.</li>
-<li>Il periodo di conservazione previsto o i criteri utilizzati per determinarlo.</li>
+<li>Les finalités du traitement.</li>
+<li>Les catégories de données personnelles concernées.</li>
+<li>Les destinataires ou catégories de destinataires des données.</li>
+<li>La durée de conservation prévue ou les critères permettant de la déterminer.</li>
 </ul>
-<p>2. Diritto di rettifica (Art. 16 GDPR)</p>
-<p>Hai il diritto di ottenere la correzione di dati personali inesatti o l'integrazione di quelli incompleti.</p>
-<p>3. Diritto alla cancellazione (&quot;Diritto all&#x27;oblio&quot;) (Art. 17 GDPR)</p>
+<h3>2. Droit de rectification (Article 16 RGPD)</h3>
+<p>Vous pouvez demander la correction des données personnelles inexactes ou l’ajout d’informations manquantes.</p>
+<h3>3. Droit à l’effacement (« Droit à l’oubli ») (Article 17 RGPD)</h3>
+<p>Vous pouvez demander la suppression de vos données personnelles dans les cas suivants :</p>
 <ul>
-<li>Puoi richiedere la cancellazione dei tuoi dati personali nei seguenti casi:</li>
-<li>I dati non sono più necessari per le finalità per cui sono stati raccolti.</li>
-<li>Hai revocato il consenso su cui si basa il trattamento e non esistono altre basi giuridiche per il trattamento.</li>
-<li>Ti opponi al trattamento e non sussistono motivi legittimi prevalenti.</li>
-<li>I dati sono stati trattati illecitamente.</li>
+<li>Les données ne sont plus nécessaires aux finalités pour lesquelles elles ont été collectées.</li>
+<li>Vous avez retiré votre consentement et aucune autre base légale ne justifie le traitement.</li>
+<li>Vous vous opposez au traitement et aucun motif légitime impérieux ne le justifie.</li>
+<li>Les données ont été traitées de manière illicite.</li>
 </ul>
-<p>4. Diritto di limitazione del trattamento (Art. 18 GDPR)</p>
-<p>Hai il diritto di ottenere la limitazione del trattamento nei casi in cui:</p>
+<h3>4. Droit à la limitation du traitement (Article 18 RGPD)</h3>
+<p>Vous pouvez demander la limitation du traitement de vos données dans les cas suivants :</p>
 <ul>
-<li>Contesti l'esattezza dei dati personali, per il periodo necessario alla verifica.</li>
-<li>Il trattamento è illecito e ti opponi alla cancellazione dei dati, richiedendone invece la limitazione.</li>
+<li>Vous contestez l’exactitude des données, pendant la période nécessaire à leur vérification.</li>
+<li>Le traitement est illicite, mais vous préférez limiter l’utilisation des données plutôt que de les supprimer.</li>
 </ul>
-<p>5. Diritto alla portabilità dei dati (Art. 20 GDPR)</p>
-<p>Puoi richiedere di ricevere i tuoi dati personali in un formato strutturato, di uso comune e leggibile da dispositivo automatico e di trasmetterli direttamente a un altro titolare del trattamento, ove tecnicamente possibile.</p>
-<p>6. Diritto di opposizione (Art. 21 GDPR)</p>
-<p>Hai il diritto di opporti al trattamento dei tuoi dati personali basato su un interesse legittimo del titolare o su finalità di marketing diretto.</p>
-<p>7. Diritto di non essere sottoposto a decisioni automatizzate (Art. 22 GDPR)</p>
-<p>Hai il diritto di non essere sottoposto a una decisione basata unicamente sul trattamento automatizzato, inclusa la profilazione, che produca effetti giuridici o incida significativamente sulla tua persona.</p>
-<p>8. Come esercitare i diritti</p>
-<p>Per esercitare i tuoi diritti, puoi inviare una richiesta al seguente indirizzo email:</p>
-<p>privacy@formaeffimera.com</p>
-<p>La richiesta sarà gestita senza ritardi ingiustificati e, in ogni caso, entro un mese dalla ricezione, salvo proroghe per casi complessi. Riceverai una risposta chiara e trasparente.</p>
-<p>9. Diritto di reclamo</p>
-<p>Se ritieni che il trattamento dei tuoi dati violi il GDPR, hai il diritto di presentare un reclamo al Garante per la Protezione dei Dati Personali (https://www.garanteprivacy.it/).</p>
+<h3>5. Droit à la portabilité des données (Article 20 RGPD)</h3>
+<p>Vous avez le droit de recevoir vos données personnelles dans un format structuré, couramment utilisé et lisible par machine, et de demander leur transfert direct à un autre responsable du traitement, si cela est techniquement possible.</p>
+<h3>6. Droit d’opposition (Article 21 RGPD)</h3>
+<p>Vous pouvez vous opposer au traitement de vos données personnelles, notamment si celui-ci est basé sur un intérêt légitime ou utilisé à des fins de prospection.</p>
+<h3>7. Droit de ne pas faire l’objet de décisions automatisées (Article 22 RGPD)</h3>
+<p>Vous avez le droit de ne pas être soumis à des décisions basées exclusivement sur un traitement automatisé, y compris le profilage, ayant des effets juridiques ou un impact significatif sur vous.</p>
+<h3>8. Comment exercer vos droits</h3>
+<p>Pour exercer vos droits, adressez votre demande à : <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a>.</p>
+<p>Votre demande sera traitée dans un délai d’un mois, sauf prolongation pour des cas complexes, auquel cas vous en serez informé.</p>
+<h3>9. Droit de réclamation</h3>
+<p>Si vous estimez que vos droits ne sont pas respectés, vous pouvez déposer une réclamation auprès de la <a href="https://www.cnil.fr/" target="_blank" rel="noopener noreferrer">Commission Nationale de l’Informatique et des Libertés (CNIL)</a>.</p>
 <p></p>
 <p></p>
 <h2>9. Aggiornamenti e modifiche all'informativa sulla privacy</h2>
