--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -134,20 +134,19 @@
 <p></p>
 <p></p>
 <h2>6. Transfert des données personnelles</h2>
-<p>Les données personnelles collectées via formaeffimera.com sont traitées exclusivement au sein de l’Union européenne (UE) et ne sont pas transférées vers des pays tiers ou des organisations internationales en dehors de l’Espace Économique Européen (EEE), sauf si cela s’avère strictement nécessaire et en conformité avec les dispositions prévues par le Règlement Général sur la Protection des Données (RGPD) et la loi n° 78-17 du 6 janvier 1978 modifiée.</p>
-<p>Exceptions au transfert des données</p>
-<p>En cas de nécessité de transfert de données personnelles vers des pays tiers :</p>
-<p>1. Le transfert sera effectué uniquement vers des pays reconnus par la Commission européenne comme offrant un niveau de protection adéquat des données personnelles.</p>
-<p>2. Si le pays tiers ne bénéficie pas de cette reconnaissance, des mesures de protection supplémentaires seront mises en œuvre, telles que :<p>
-<li>L’utilisation de clauses contractuelles types approuvées par la Commission européenne.<li>
-<li>Toute autre garantie équivalente prévue par le RGPD, conformément à l’article 46 et aux dispositions nationales applicables.<li>
+<p>Les données personnelles collectées via formaeffimera.com sont traitées exclusivement au sein de l’Union européenne (UE) et ne sont pas transférées vers des pays tiers ou des organisations internationales en dehors de l’Espace économique européen (EEE), sauf si cela est strictement nécessaire et en conformité avec les dispositions prévues par le Règlement général sur la protection des données (RGPD).</p>
+<h3>Exceptions au transfert des données</h3>
+<p>Si le transfert de données vers des pays tiers s’avérait nécessaire :</p>
+<ul>
+<li>Le transfert sera effectué uniquement vers des pays offrant un niveau de protection des données personnelles jugé adéquat par la Commission européenne, ou</li>
+<li>Des mesures de protection supplémentaires seront mises en place, telles que l’utilisation de clauses contractuelles types (Standard Contractual Clauses - SCC) approuvées par la Commission européenne ou d’autres garanties équivalentes prévues par le RGPD.</li>
 </ul>
-<p>Prestataires et outils utilisés</p>
-<p>Il sito utilizza i seguenti provider e strumenti per la gestione del dominio e dei contenuti:</p>
-<p>1. Register.it : Utilisé pour la gestion du domaine. Ce prestataire respecte les normes de sécurité et de confidentialité en vigueur dans l’Union européenne.</p>
-<p>2. GitHub : Utilisé pour la gestion du site et de ses contenus. Les données traitées via GitHub sont stockées sur des serveurs situés au sein de l’UE ou font l’objet de garanties appropriées conformes au RGPD.</p>
-<p>Absence de transfert non autorisé</p>
-<p>Aucun transfert de données personnelles vers des pays tiers ne sera effectué sans une communication préalable à l’utilisateur. Le cas échéant, un consentement explicite sera requis si cela est imposé par la réglementation.</p>
+<h3>Fournisseurs et outils utilisés</h3>
+<p>Le site utilise les fournisseurs et outils suivants pour la gestion du domaine et des contenus :</p>
+<p>1. Register.it : pour la gestion du domaine, conforme aux normes de sécurité et de confidentialité de l’Union européenne.</p>
+<p>2. GitHub : pour la gestion du site et des contenus. Les données gérées via GitHub sont stockées sur des serveurs situés dans l’Union européenne ou protégés de manière adéquate.</p>
+<h3>Absence de transfert non autorisé</h3>
+<p>Aucun transfert de données personnelles vers des pays tiers ne sera effectué sans une communication préalable et, le cas échéant, sans votre consentement explicite.</p>
 <p></p>
 <p></p>
 <h2>7. Sécurité des données personnelles</h2>
