--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -227,7 +227,7 @@
 <p>Pour toute question ou demande de clarification concernant les modifications apportées à la politique de confidentialité, les utilisateurs peuvent contacter le responsable du traitement via :</p>
 <ul>
 <li>Email : <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a></li>
-<li>Page dédiée : <a href="https://formaeffimera.com/contacts" target="_blank" rel="noopener noreferrer">formaeffimera.com/contacts</a></li>
+<li>Page dédiée : <a href="https://formaeffimera.com/fr/contacts" target="_blank" rel="noopener noreferrer">formaeffimera.com/contacts</a></li>
 </ul>
 <p></p>
 <p></p>
